applications/traefik/traefik-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    name: traefik
