applications/traefik/traefik-service.yml
#------Traefik-SVC-Type-LB-Declartion---------#
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  type: LoadBalancer
  #loadBalancerIP: <your-cluster-public-ip>
